--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -34,41 +34,29 @@ jobs:
           git checkout -b main origin/main
           git switch build
 
-      # - name: Cache Rust dependencies
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: |
-      #       ~/.cargo
-      #     key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-rust-
-      #
-      # - name: Cache apt packages
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: |
-      #       /var/cache/apt/archives
-      #     key: ${{ runner.os }}-apt-${{ hashFiles('**/apt-packages.txt') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-apt-
-      #
-      # - name: Cache LuaRocks dependencies
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: |
-      #       ~/.luarocks
-      #     key: ${{ runner.os }}-luarocks-${{ hashFiles('**/luarocks.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-luarocks-
+      - name: Cache Rust dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-
+
+      - name: Cache LuaRocks dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.luarocks
+          key: ${{ runner.os }}-luarocks-${{ hashFiles('**/luarocks.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-luarocks-
 
       - name: apt stuff
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: graphviz texlive texlive-latex-extra
           version: 0.1
-        # run: |
-        #   sudo apt update
-        #   sudo apt install -y graphviz texlive texlive-latex-extra python3-pip
 
       - name: setup rust
         uses: actions-rs/toolchain@v1
