--- a/s03r/s03r.yaml
+++ b/s03r/s03r.yaml
@@ -180,8 +180,8 @@ constraints:
       Steffi: Elia
       # Dummy: Peter
 
-  # - type: !Box {num: 6, comment: "E13"}
-  #   lights: 
-  #   map:
-  #     Alicia: Teezy
-  #    # Sandra: Paco
+  - type: !Box {num: 6, comment: "E13"}
+    lights: 0
+    map:
+      Alicia: Teezy
+     # Sandra: Paco
