--- a/s03r/s03r.yaml
+++ b/s03r/s03r.yaml
@@ -33,12 +33,12 @@ setB:
 
 constraints:
   - type: !Box {num: 1, comment: "E03"}
-    lights: 0
+    check: !Lights 0
     map:
       Jenny: Danilo
 
   - type: !Night {num: 1, comment: "E04"}
-    lights: 3
+    check: !Lights 3
     map:
       Darya: Danilo
       Sandra: Paco
@@ -53,12 +53,12 @@ constraints:
 
 
   - type: !Box {num: 2, comment: "E05"}
-    lights: 0
+    check: !Lights 0
     map:
       Jenny: Elia
 
   - type: !Night {num: 2, comment: "E06"}
-    lights: 2
+    check: !Lights 2
     map:
       Sabrina: Mike
       Paulina: Danilo
@@ -72,12 +72,12 @@ constraints:
       Sandra: Elia
 
   - type: !Box {num: 3, comment: "E07"}
-    lights: 0
+    check: !Lights 0
     map:
       Darya: Elia
 
   - type: !Night {num: 3, comment: "E08"}
-    lights: 2
+    check: !Lights 2
     map:
       Alicia: Steffen
       Darya: Danilo
@@ -91,12 +91,12 @@ constraints:
       Steffi: Marvin
 
   - type: !Box {num: 4, comment: "E09"}
-    lights: 0
+    check: !Lights 0
     map:
       Kim: Mike
 
   - type: !Night {num: 4, comment: "E10"}
-    lights: 4
+    check: !Lights 4
     map:
       Sandra: Steffen
       Paulina: Max
@@ -111,63 +111,63 @@ constraints:
       # Alicia: Mike
 
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Elia
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Emanuell
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Fabio
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Marvin
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Mike
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Paco
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Peter
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Steffen
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Teezy
   - type: !Box {num: 5, comment: "E11"}
-    lights: 0
+    check: !Lights 0
     hidden: true
     map:
       Darya: Max
 
   - type: !Box {num: 5.1, comment: "E11"}
-    lights: 1
+    check: !Lights 1
     map:
       Darya: Danilo
 
   - type: !Night {num: 5, comment: "E12"}
-    lights: 3
+    check: !Lights 3
     map:
       Alicia: Steffen
       Darya: Danilo
@@ -182,13 +182,13 @@ constraints:
       # Dummy: Peter
 
   - type: !Box {num: 6, comment: "E13"}
-    lights: 0
+    check: !Lights 0
     map:
       Alicia: Teezy
      # Sandra: Paco
 
   - type: !Night {num: 6, comment: "E14"}
-    lights: 4
+    check: !Lights 4
     map:
       Darya: Danilo
       Alicia: Paco
