--- a/s03r/s03r.yaml
+++ b/s03r/s03r.yaml
@@ -263,4 +263,24 @@ constraints:
       Alicia: Steffen
       Sandra: Elia
 
+  - type: !Box {num: 10, comment: "E21"}
+    check: !Lights 1
+    map:
+      # Shakira: Marvin
+      Alicia: Elia
+
+  - type: !Night {num: 10, comment: "E22"}
+    check: !Lights 10
+    map:
+      Steffi: Emanuell
+      Darya: Danilo
+      Alicia: Elia
+      Shakira: Marvin
+      Sabrina: Mike
+      Kim: Teezy
+      Marie: Fabio
+      Sandra: Steffen
+      Paulina: Max
+      Jenny: Paco
+
 # tree_top: Kim
