--- a/Makefile.action
+++ b/Makefile.action
@@ -1,21 +1,21 @@
-DAT_LUA = s01r/s01r.dat s02r/s02r.dat s02/s02.dat s03/s03.dat
-OUT_LUA = $(addsuffix .out, $(basename $(DAT_LUA)))
-
-DAT_PY = s04/s04.yaml
-OUT_PY = $(addsuffix .out, $(basename $(DAT_PY)))
-
-DAT_RUST = s03r/s03r.yaml s04r/s04r.yaml
+DAT_RUST = s01r/s01r.yaml s02/s02.yaml s02r/s02r.yaml s03/s03.yaml s03r/s03r.yaml s04/s04.yaml s04r/s04r.yaml
 OUT_RUST = $(addsuffix .out, $(basename $(DAT_RUST)))
 
-OUT   = $(OUT_LUA) $(OUT_PY) $(OUT_RUST)
+OUT   = $(OUT_RUST)
 ALIAS = $(notdir $(OUT))
 
-.PHONY: all clean_tex $(ALIAS)
+.PHONY: all clean_tex clean $(patsubst %/,clean_%,$(dir $(DAT_RUST))) $(ALIAS)
 
 include Makefile.conf
 
 all: $(OUT)
 	
+
+clean: clean_tex $(patsubst %/,clean_%,$(dir $(DAT_RUST)))
+	
+
+$(patsubst %/,clean_%,$(dir $(DAT_RUST))): clean_%: %
+	-rm "$(<)/$(<)"*.{out,pdf,png,dot}
 
 clean_tex:
 	- rm statsMN.tex{,sort}
@@ -25,23 +25,6 @@ clean_tex:
 
 $(ALIAS):
 	make $(wildcard */$@)
-
-$(OUT_PY): %.out: %.yaml sim.py
-	@date
-	python3 sim.py -c -o $(basename $<) $< > $(basename $<).col.out
-	sed 's/\x1b\[[0-9;]*m//g' $(basename $<).col.out > $(basename $<).out
-	echo "\\\\addplot table {$(basename $<)_statMN.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsMN.tex"
-	echo "\\\\addplot table {$(basename $<)_statMB.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsMB.tex"
-	echo "\\\\addplot table {$(basename $<)_statInfo.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsInfo.tex"
-	@date
-
-$(OUT_LUA): %.out: %.dat perm.lua sim_perm.lua
-	@date
-	lua sim_perm.lua -o $(basename $<) $< > $(basename $<).out
-	echo "\\\\addplot table {$(basename $<)_statMN.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsMN.tex"
-	echo "\\\\addplot table {$(basename $<)_statMB.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsMB.tex"
-	echo "\\\\addplot table {$(basename $<)_statInfo.out}; \\\\addlegendentry{$(basename $(notdir $<))}" >> "statsInfo.tex"
-	@date
 
 $(OUT_RUST): %.out: %.yaml ./rust/src/*
 	@date
