--- a/s02r/s02r.yaml
+++ b/s02r/s02r.yaml
@@ -74,7 +74,7 @@ constraints:
     check: !Lights 0
     map:
       Celina: Lukas
-# Calvin -> Isabelle
+      # Calvin: Isabelle
 
   - type: !Night {num: 3, comment: "E08"}
     check: !Lights 3
@@ -90,17 +90,15 @@ constraints:
       Ricarda: Maurice
       Zoe: Max
 
-# ? # E09
-# Amadu -> Isabelle
+  # - type: !Box {num: 4, comment: "E09"}
+  #   check: !Lights ?
+  #   map:
+  #     Amadu: Isabelle
 
-  - type: !Box {num: 4.10, comment: "E09 -- Lukas will gehen"}
+  - type: !Box {num: 4.1, comment: "E09 -- Lukas will gehen"}
     check: !Lights 1
     map:
       Luisa: Lukas
-  - type: !Box {num: 4.11, comment: "E09 -- Lukas will gehen"}
-    check: !Lights 0
-    map:
-      Luisa: Felix
 
   - type: !Box {num: 5, comment: "E11"}
     check: !Lights 0
@@ -120,12 +118,12 @@ constraints:
       Luisa: Lukas
       Ricarda: Max
       Zoe: Luca
-# Calvin
+      # Calvin
 
   - type: !Box {num: 6, comment: "E13"}
     check: !Lights 0
     map:
-# Max -> Karina
+      # Max: Karina
       Isabelle: Pharrell
 
   - type: !Night {num: 6, comment: "E14"}
@@ -141,18 +139,13 @@ constraints:
       Luisa: Lukas
       Ricarda: Pharrell
       Zoe: Luca
-# Amadu -> Isabelle
+      # Amadu: Isabelle
 
-  - type: !Box {num: 7, comment: "E15"}
-    check: !Lights 0
-    hidden: true
-    map:
-      Cecilia: Felix
   - type: !Box {num: 7.1, comment: "E15"}
     check: !Lights 1
     map:
       Cecilia: Amadu
-# Gina    -> Fabio
+      # Gina: Fabio
 
   - type: !Night {num: 7, comment: "E16"}
     check: !Lights 4
@@ -167,18 +160,13 @@ constraints:
       Luisa: Lukas
       Ricarda: Pharrell
       Zoe: Luca
-# Ricarda  -> Maurice
+      # Ricarda: Maurice
 
   - type: !Box {num: 8, comment: "E17"}
-    check: !Lights 0
-    hidden: true
-    map:
-      Anna: Felix
-  - type: !Box {num: 8.1, comment: "E17"}
     check: !Lights 1
     map:
       Anna: Micha
-# Ricarda -> Pharrell
+      # Ricarda: Pharrell
 
   - type: !Night {num: 8, comment: "E18"}
     check: !Lights 5
@@ -193,13 +181,13 @@ constraints:
       Luisa: Lukas
       Ricarda: Pharrell
       Zoe: Maurice
-# Max
+      # Max
 
   - type: !Box {num: 9, comment: "E19"}
     check: !Lights 0
     map:
       Ricarda: Pharrell
-# Gina -> Fabio
+      # Gina: Fabio
 
   - type: !Night {num: 9, comment: "E20"}
     check: !Lights 7
@@ -214,13 +202,13 @@ constraints:
       Karina: Martin
       Zoe: Pharrell
       Celina: Fabio
-# Ricarda -> Luca
+      # Ricarda: Luca
 
   - type: !Box {num: 10, comment: "E21"}
     check: !Lights 0
     map:
       Franzi: Max
-# Karina -> Martin
+      # Karina: Martin
 
   - type: !Night {num: 10, comment: "E21"}
     check: !Lights 10
@@ -235,4 +223,4 @@ constraints:
       Luisa: Lukas
       Ricarda: Maurice
       Zoe: Pharrell
-# Max
+      # Max
