--- a/s05/s05.yaml
+++ b/s05/s05.yaml
@@ -125,3 +125,22 @@ constraints:
       Sidar: Jana
       # Melanie
       # Maja
+
+  - type: !Box {num: 5, comment: "E11"}
+    check: !Lights 1
+    noExclude: true
+    hidden: true
+    map:
+      Gerrit: Melanie
+  - type: !Box {num: 5, comment: "E11"}
+    check: !Lights 1
+    noExclude: true
+    hidden: true
+    map:
+      Gerrit: Pia
+  - type: !Box {num: 5.1, comment: "E11"}
+    check: !Lights 1
+    noExclude: true
+    map:
+      Gerrit: Tais
+      # Paddy: Lina
