--- a/s05/s05.yaml
+++ b/s05/s05.yaml
@@ -1,7 +1,7 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
-tree_gen: false
+tree_gen: true
 
 # rule_set: !SomeoneIsTrip
 rule_set: !FixedTrip Melanie
@@ -144,3 +144,17 @@ constraints:
     map:
       Gerrit: Tais
       # Paddy: Lina
+
+  - type: !Night {num: 5, comment: "E12"}
+    check: !Lights 4
+    map:
+      Gerrit: Tais
+      Wilson: Shelly
+      Ryan: Jana
+      Martin: Lisa-Marie
+      Sandro: Sina
+      Kevin: Julia
+      Eti: Maja
+      Sidar: Afra
+      Paddy: Lina
+      Paolo: Edda
