--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       # see https://github.com/actions/checkout#usage for reference
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: build
           fetch-depth: 0
@@ -62,7 +62,7 @@ jobs:
           fi
 
       - name: setup rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
 
@@ -88,7 +88,7 @@ jobs:
       # - name: ls
       #   run: ls -al ./*
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Built results
           branch: build
