--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -19,7 +19,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: blang/latex:ubuntu
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -55,11 +55,11 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y graphviz
-          if ! dpkg -l | grep -q texlive-latex-extra; then
-                sudo apt install -y graphviz texlive texlive-latex-extra
-          else
-            echo "TeX Live packages are already installed."
-          fi
+          # if ! dpkg -l | grep -q texlive-latex-extra; then
+          #       sudo apt install -y graphviz texlive texlive-latex-extra
+          # else
+          #   echo "TeX Live packages are already installed."
+          # fi
 
       - name: Cache Rust cargo registry
         uses: actions/cache@v3
