--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -19,7 +19,9 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: blang/latex:ubuntu
+    runs-on: ubuntu-latest
+    container:
+      image: blang/latex:ubuntu
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
