--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -20,6 +20,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    container:
+      iamge: ghcr.io/atticus-sullivan/sim-ayto/ayto-action-image:latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,26 +36,26 @@ jobs:
           git checkout -b main origin/main
           git switch build
 
-      - name: Cache TeX Live packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            /usr/share/texlive
-            /usr/share/texmf
-            /var/lib/texmf
-            /etc/texmf
-          key: texlive-packages-${{ runner.os }}
-          restore-keys: texlive-packages-
+      # - name: Cache TeX Live packages
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       /usr/share/texlive
+      #       /usr/share/texmf
+      #       /var/lib/texmf
+      #       /etc/texmf
+      #     key: texlive-packages-${{ runner.os }}
+      #     restore-keys: texlive-packages-
 
-      - name: apt stuff
-        run: |
-          sudo apt update
-          sudo apt install -y graphviz
-          if ! dpkg -l | grep -q texlive-latex-extra; then
-                sudo apt install -y texlive texlive-latex-extra
-          else
-            echo "TeX Live packages are already installed."
-          fi
+      # - name: apt stuff
+      #   run: |
+      #     sudo apt update
+      #     sudo apt install -y graphviz
+      #     if ! dpkg -l | grep -q texlive-latex-extra; then
+      #           sudo apt install -y texlive texlive-latex-extra
+      #     else
+      #       echo "TeX Live packages are already installed."
+      #     fi
 
       - name: Cache Rust cargo registry
         uses: actions/cache@v3
