--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -32,6 +32,7 @@ jobs:
           ref: build
           fetch-depth: 0
       - run: |
+          git config --global --add safe.directory /__w/sim-ayto/sim-ayto
           git fetch --no-tags origin main
           git checkout -b main origin/main
           git switch build
